More realistic non-stratified example in docs

--- a/vignettes/articles/references.bib
+++ b/vignettes/articles/references.bib
@@ -397,3 +397,22 @@
   publisher={American Psychological Association},
   doi={10.1037/h0044139}
 }
+@article{higgins_2009,
+  title={Monetary unit sampling: Improving estimation of the total audit error},
+  author={Higgins, Huong N and Nandram, Balgobin},
+  journal={Advances in Accounting},
+  volume={25},
+  number={2},
+  pages={174--182},
+  year={2009},
+  publisher={Elsevier},
+  doi={10.1016/j.adiac.2009.06.001}
+}
+@book{lohr_2021,
+  title={Sampling: design and analysis},
+  author={Lohr, Sharon L},
+  year={2021},
+  publisher={Chapman and Hall/CRC},
+  doi={10.1201/9780429298899},
+  isbn={978-0429298899}
+}
